@@ -6,6 +6,8 @@ Changes in version 4.0
 
  Release Details:
   44:
+   Array.arrayCopy() now deals with src not in canonical order. mostly affected aggregation of datasets which
+     do sectioning in memory, such as GINI.
    TDS: remote station data
    add List<Station> StationCollection.getStations(String[] names);
    CdmRemoteDatasetFactory now handles any type of cdmRemote dataset, including Grid.
